--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -1,43 +1,46 @@
-.nav-userdeatils{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    .nav-username{
-        font-size: 16px;
-        display: inline;
-        margin-right: 10px;
-        font-weight: 500;
-    }
-    .nav-userimage{
-        width: 40px;
-        height: 40px;
-        border-radius: 100%;
-        border: solid grey thin;
-    }
+.nav-userdeatils {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .nav-username {
+    font-size: 16px;
+    display: inline;
+    margin-right: 10px;
+    font-weight: 500;
+  }
+  .nav-userimage {
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    margin-right: 20px;
+    border: solid grey thin;
+  }
 
-    button{
-        margin-left: 10px;
-        background-color: transparent;
-        border: solid rgb(255, 81, 81) 2px;
-        color: rgb(255, 81, 81);
-        font-size: 18px;
-        border-radius: 4px;
-        padding: 5px 15px;
-    }
+  button {
+    margin-left: 10px;
+    background-color: transparent;
+    border: solid rgb(255, 81, 81) 2px;
+    color: rgb(255, 81, 81);
+    font-size: 15px;
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 5px 15px;
+    transition: background-color 0.5s;
+  }
 
-    button:hover{
-        background-color: rgb(255, 81, 81);
-        color: white;
-    }
+  button:hover {
+    background-color: rgb(233, 70, 70);
+    color: white;
+  }
 }
 
-@media screen and (max-width:720px) {
-    .nav-userdeatils{
-        flex-direction: column;
+@media screen and (max-width: 720px) {
+  .nav-userdeatils {
+    flex-direction: column;
 
-        button{
-            margin-top: 10px;
-            margin-left: 0;
-        }
+    button {
+      margin-top: 10px;
+      margin-left: 0;
     }
+  }
 }
