--- a/frontend/src/Components/Feeds/FeedCard.scss
+++ b/frontend/src/Components/Feeds/FeedCard.scss
@@ -1,85 +1,102 @@
 #feedCard-section {
-    margin: 10px;
-    display: inline-block;
-    max-width: 31.5%;
-    .card {
-        width: 100%;
-        background-color: rgb(255, 255, 255);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 10px;
-        border-radius: 10px;
-        overflow: hidden;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-        img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            margin: 5px;
-            border: solid grey 2px;
-        }
-        .details {
-            margin: 10px;
-            h2 {
-                font-weight: 600;
-                font-size: 20px;
-            }
-            p {
-                font-weight: 400;
-                font-size: 16px;
-            }
-        }
-
-        .info{
-            font-size: 14px;
-        }
-
-        .rating-controls{
-            width: 100% ;
-            margin-top: 20px;
-            display: flex;
-            justify-content: space-around;
-            button{
-                padding: 10px 20px;
-                width: 40%;
-            }
-
-            .thumbs-up{
-                background-color: transparent;
-                border: solid rgb(41, 138, 41) 2px;
-                color: rgb(41, 138, 41);
-                font-size: 22px;
-                border-radius: 4px;
-            }
-            .thumbs-up:hover{
-                background-color: rgb(41, 138, 41);
-                color: white;
-            }
-            .thumbs-down{
-                background-color: transparent;
-                border: solid rgb(255, 81, 81) 2px;
-                color: rgb(255, 81, 81);
-                font-size: 22px;
-                border-radius: 4px;
-            }
-            .thumbs-down:hover{
-                background-color: rgb(255, 81, 81);
-                color: white;
-            }
-        }
+  margin: 10px;
+  display: inline-block;
+  width: 31.2%;
+  .card {
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    margin: 13px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      margin: 5px;
+      border: solid grey 2px;
     }
+    .details {
+      margin: 10px;
+      h2 {
+        font-weight: 600;
+        font-size: 20px;
+      }
+      p {
+        font-weight: 400;
+        font-size: 16px;
+      }
+    }
+
+    .rating-controls {
+      width: 100%;
+      margin-top: 20px;
+      display: flex;
+      justify-content: space-around;
+      button {
+        padding: 5px 0px;
+        width: 18%;
+        cursor: pointer;
+        font-size: 14px;
+      }
+
+      .thumbs-up {
+        background-color: transparent;
+        border: solid rgb(41, 138, 41) 2px;
+        color: rgb(41, 138, 41);
+        border-radius: 4px;
+        transition: background-color 0.5s;
+
+        &:hover {
+          background-color: rgb(41, 138, 41);
+          color: white;
+        }
+      }
+
+      .thumbs-down {
+        background-color: transparent;
+        border: solid rgb(255, 81, 81) 2px;
+        color: rgb(255, 81, 81);
+        border-radius: 4px;
+        transition: background-color 0.5s;
+
+        &:hover {
+          background-color: rgb(255, 81, 81);
+          color: white;
+        }
+      }
+
+      .add-friend-btn {
+        background-color: transparent;
+        border: solid rgb(14, 133, 212) 2px;
+        color: rgb(14, 133, 212);
+        border-radius: 4px;
+        transition: background-color 0.5s;
+
+        &:hover {
+          background-color: rgb(14, 133, 212);
+          color: white;
+        }
+      }
+    }
+  }
 }
 
-@media only screen and (max-width: 900px) {
-    #feedCard-section{
-        max-width: 47%;
-    }
+@media only screen and (max-width: 992px) {
+  #feedCard-section {
+    width: 47%;
+    padding: 0;
+  }
 }
 
 @media only screen and (max-width: 435px) {
-    #feedCard-section{
-        max-width: 100%;
-    }
+  #feedCard-section {
+    width: 100%;
+  }
 }
