--- a/frontend/src/Components/Feeds/FeedCard.scss
+++ b/frontend/src/Components/Feeds/FeedCard.scss
@@ -16,11 +16,11 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
       rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     img {
-      width: 150px;
-      height: 150px;
+      width: 140px;
+      height: 140px;
       border-radius: 50%;
       margin: 5px;
-      border: solid grey 2px;
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     }
     .details {
       margin: 10px;
